--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,15 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+*.rbc
+*.sassc
+.sass-cache
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/spec/tmp/*
+**.orig
+.project
